package beans;

option optimize_for = SPEED;
option java_package = "game.module.mail.bean";

message MailList {
	message MailAttachment{
		required int32 goodmodelId = 1;
		required int32 count = 2;
	}
	message MailItem{
		required int32 id = 1;
		required int32 senderId = 2;
		required int32 receiverId = 3;
		required string title = 4;
		required string content = 5;
		required int64 sendTime = 6;
		required int32 isRead = 7;
		repeated MailAttachment mailAttachment = 8;
	}
	repeated MailItem mailAll = 1;
}

message DBMailParam {
	message MailParam{
		// 0发件人, 1标题, 2内容
		required int32 type = 1;
		// Value值
		required string value = 2;
	}
	repeated MailParam mailParam = 1;
}

message DBMailAtt {
	message MailAtt{
		// 物品ID
		required int32 itemId = 1;
		// 数量
		required int32 cnt = 2;
	}
	repeated MailAtt mailAtt = 1;
}